WebClient Logging and Node reply

--- a/static/miniDLT.css
+++ b/static/miniDLT.css
@@ -48,7 +48,6 @@ html,body {
 
 div.floating {
   float:left;
-  padding:10px;
 }
 
 input {
@@ -70,7 +69,7 @@ span.clear { clear: left; display: block; }
 .minorpanel {
         background-color:#544;
         border-radius:2px;
-        
+        padding:15px;
         }
 
 ::placeholder {
@@ -110,7 +109,10 @@ input.rounded {
     background-color: #FF8800;
     color:#000;
 
+    height: 30.5px;
     /*
+    height: 30.5px;
+    height: 31px;
     position: relative;
     left: 125px;
     transform: translate(-50%-200px/2), 0);
@@ -120,14 +122,43 @@ input.rounded {
     */
 }
 
+input.rounded:hover {
+        margin-top:0.5px;
+        margin-left:2px;
+        padding-top:5.5px;
+        height: 29.5px;
+        width:146px;
+        }
+
+input.rounded:active {
+    background-color:#DD6600;        
+        }
+
+p {
+   margin:0px;
+   padding:3px;
+   }
+
+.logentry{
+        margin:0px;
+        padding:2px;
+        padding-left:5px;
+        font-size:10px;
+        line-height:10px;
+        }
+
+ul.logentry{
+        padding-left:30px;
+        }
+
 .logger {
-        background-color:#CBB;
+        background-color:#322;
         width:100%;
         position:fixed;
         bottom:0px;
         height:25%;
-        font-size:12px;
-        color:#766;
+        color:#877;
         font-family:"Courier";
         overflow:auto;
+        border-top: #877 solid .5px;
         }
