--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,13 @@
                             <p>Message: <p/>
                             <input id="message" type="text" value="" style="width:560px;" placeholder="message for server" onkeyup="onEnterDown(sendMessage)"/> 
                         </div>
+                        <div >
+                            <p>Private Key: <p/>
+                            <input id="private" type="password" value="d29b78965e174980a4f41a3ffe35b74b6ac601271e884eda23f18f6281386106" style="width:800px;font-size:10px;font-family:Courier;line-height:23px;" placeholder="message for server" onkeyup="onEnterDown(sendMessage)"/> 
+                        </div>
                         
                         <div >
+                            <br/>
                             <input type="button" class="rounded" value="send" onclick="sendMessage()" /> 
                         </div>
                         
