--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,10 @@
                     </div>
                     <div >
                         <p>Private Key: <p/>
-                        <input id="private" type="password" value="d29b78965e174980a4f41a3ffe35b74b6ac601271e884eda23f18f6281386106" style="width:800px;font-size:10px;font-family:Courier;line-height:23px;" placeholder="message for server" onkeyup="onEnterDown(sendMessage)"/> 
+                        <div style="width:800px;">
+                            <input id="private" type="password" value="d29b78965e174980a4f41a3ffe35b74b6ac601271e884eda23f18f6281386106" style="width:750px;font-size:10px;font-family:Courier;line-height:23px;" placeholder="message for server" onkeyup="onEnterDown(sendMessage)"/> 
+                            <i id="visibility" class="material-icons secretIco" onclick="changeVisibility('private','visibility')">visibility_off</i>
+                        </div>
                     </div>
                     
                     <div >
