--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="{{ url_for('static', filename='miniDLT.js') }}" type="text/javascript" ></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='miniDLT.css') }}" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='iconfont/material-icons.css') }}" />
   </head>
   <body onload="init()">
   
